<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/travel_details_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16"
        android:paddingTop="@dimen/dimen_8"
        android:paddingBottom="@dimen/dimen_8"
        app:cardCornerRadius="@dimen/dimen_5"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/source_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16">

                <AutoCompleteTextView
                    android:id="@+id/source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_flight_takeoff_black_18dp"
                    android:drawablePadding="@dimen/dimen_8"
                    android:drawableStart="@drawable/ic_flight_takeoff_black_18dp"
                    android:hint="@string/source"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/divider_size"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginBottom="@dimen/dimen_8"
                    android:background="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/reverse_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|right"
                    android:background="@null"
                    android:paddingLeft="@dimen/dimen_16"
                    android:paddingRight="@dimen/dimen_16"
                    android:src="@drawable/selector_ic_switch" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/destination_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8">

                <AutoCompleteTextView
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableLeft="@drawable/ic_flight_land_black_18dp"
                    android:drawablePadding="@dimen/dimen_8"
                    android:drawableStart="@drawable/ic_flight_land_black_18dp"
                    android:hint="@string/destination"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginBottom="@dimen/dimen_8"
                android:background="@color/colorPrimary" />

            <EditText
                android:id="@+id/departure_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@null"
                android:drawableLeft="@drawable/ic_date_range_black_18dp"
                android:drawablePadding="@dimen/dimen_8"
                android:drawableStart="@drawable/ic_date_range_black_18dp"
                android:focusable="false"
                android:hint="@string/date_of_departure"
                android:inputType="date"
                android:maxLines="1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_size"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginBottom="@dimen/dimen_8"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/travellers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/travellers"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/travellers_input_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:text="@string/travellers_input_default_value" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/traveller_class"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/traveller_class"
                        android:textColor="@color/gray" />

                    <Spinner
                        android:id="@+id/traveller_class_input_value"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:entries="@array/class_type_array"
                        android:overlapAnchor="false" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/search_flights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/travel_details_card_view"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_centerHorizontal="true"
        android:text="@string/search" />
</RelativeLayout>