<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/travel_details_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/dimen_8"
    android:paddingLeft="@dimen/dimen_16"
    android:paddingRight="@dimen/dimen_16"
    android:paddingTop="@dimen/dimen_8"
    app:cardCornerRadius="@dimen/dimen_5"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_16">

        <ImageView
            android:id="@+id/flight_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_flight_land_black_18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8"
            android:layout_marginRight="@dimen/dimen_8"
            android:layout_toLeftOf="@id/flight_fare"
            android:layout_toRightOf="@+id/flight_image"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/departure_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_16_sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"
                    tools:text="11.10" />

                <View
                    android:layout_width="@dimen/dimen_30"
                    android:layout_height="@dimen/divider_height"
                    android:layout_marginLeft="@dimen/dimen_8"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/dimen_8"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/arrival_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dimen_16_sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"
                    tools:text="13.15" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/no_of_stops"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_2"
                    android:layout_marginRight="@dimen/dimen_2"
                    android:textSize="@dimen/small_text_size"
                    android:textColor="@color/gray"
                    tools:text="@string/no_of_stops" />

                <TextView
                    android:id="@+id/travel_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_2"
                    android:layout_marginRight="@dimen/dimen_2"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/small_text_size"
                    tools:text="@string/travel_time" />

                <TextView
                    android:id="@+id/travel_origin_destination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_2"
                    android:layout_marginRight="@dimen/dimen_2"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/small_text_size"
                    tools:text="@string/travel_origin_destination" />

            </LinearLayout>

            <TextView
                android:id="@+id/travel_flight_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/small_text_size"
                android:layout_marginTop="@dimen/dimen_8" />
        </LinearLayout>

        <TextView
            android:id="@+id/flight_fare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_16_sp"
            tools:text="$23.00" />

    </RelativeLayout>
</android.support.v7.widget.CardView>